// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/content/TextElement return a textElement 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor  "
  >
    <div
      class="octo-editor-preview octo-placeholder"
    />
    <div
      class="octo-editor-active Editor"
      style="visibility: hidden; position: absolute; top: 0px; left: 0px;"
    >
      <div
        id="test-id-wrapper"
      >
        <textarea
          id="test-id"
          style="display: none;"
        />
        <div
          class="EasyMDEContainer"
        >
          <div
            class="CodeMirror cm-s-easymde CodeMirror-wrap CodeMirror-focused"
          >
            <div
              style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 0px; left: 0px;"
            >
              <textarea
                autocapitalize="off"
                autocorrect="off"
                spellcheck="false"
                style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"
                tabindex="0"
              />
            </div>
            <div
              class="CodeMirror-vscrollbar"
              cm-not-content="true"
              tabindex="-1"
            >
              <div
                style="min-width: 1px;"
              />
            </div>
            <div
              class="CodeMirror-hscrollbar"
              cm-not-content="true"
              tabindex="-1"
            >
              <div
                style="height: 100%; min-height: 1px;"
              />
            </div>
            <div
              class="CodeMirror-scrollbar-filler"
              cm-not-content="true"
            />
            <div
              class="CodeMirror-gutter-filler"
              cm-not-content="true"
            />
            <div
              class="CodeMirror-scroll"
              style="min-height: 10px;"
              tabindex="-1"
            >
              <div
                class="CodeMirror-sizer"
                style="margin-left: 0px;"
              >
                <div
                  style="position: relative;"
                >
                  <div
                    class="CodeMirror-lines"
                    role="presentation"
                  >
                    <div
                      role="presentation"
                      style="position: relative; outline: none;"
                    >
                      <div
                        class="CodeMirror-measure"
                      />
                      <div
                        class="CodeMirror-measure"
                      >
                        <pre
                          class="CodeMirror-line"
                          role="presentation"
                        >
                          <span
                            role="presentation"
                            style="padding-right: .1px;"
                          >
                            hello
                          </span>
                        </pre>
                      </div>
                      <div
                        style="position: relative; z-index: 1;"
                      />
                      <div
                        class="CodeMirror-cursors"
                      />
                      <div
                        class="CodeMirror-code"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                style="position: absolute; height: 50px; width: 1px;"
              />
              <div
                class="CodeMirror-gutters"
                style="display: none;"
              />
            </div>
          </div>
          <div
            class="editor-preview-side editor-preview"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/content/TextElement return a textElement and do a blur event 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor  "
  >
    <div
      class="octo-editor-preview octo-placeholder"
    />
    <div
      class="octo-editor-active Editor"
      style="visibility: hidden; position: absolute; top: 0px; left: 0px;"
    >
      <div
        id="test-id-wrapper"
      >
        <textarea
          id="test-id"
          style="display: none;"
        />
        <div
          class="EasyMDEContainer"
        >
          <div
            class="CodeMirror cm-s-easymde CodeMirror-wrap"
          >
            <div
              style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 0px; left: 0px;"
            >
              <textarea
                autocapitalize="off"
                autocorrect="off"
                spellcheck="false"
                style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"
                tabindex="0"
              />
            </div>
            <div
              class="CodeMirror-vscrollbar"
              cm-not-content="true"
              tabindex="-1"
            >
              <div
                style="min-width: 1px;"
              />
            </div>
            <div
              class="CodeMirror-hscrollbar"
              cm-not-content="true"
              tabindex="-1"
            >
              <div
                style="height: 100%; min-height: 1px;"
              />
            </div>
            <div
              class="CodeMirror-scrollbar-filler"
              cm-not-content="true"
            />
            <div
              class="CodeMirror-gutter-filler"
              cm-not-content="true"
            />
            <div
              class="CodeMirror-scroll"
              style="min-height: 10px;"
              tabindex="-1"
            >
              <div
                class="CodeMirror-sizer"
                style="margin-left: 0px;"
              >
                <div
                  style="position: relative;"
                >
                  <div
                    class="CodeMirror-lines"
                    role="presentation"
                  >
                    <div
                      role="presentation"
                      style="position: relative; outline: none;"
                    >
                      <div
                        class="CodeMirror-measure"
                      />
                      <div
                        class="CodeMirror-measure"
                      >
                        <pre
                          class="CodeMirror-line"
                          role="presentation"
                        >
                          <span
                            role="presentation"
                            style="padding-right: .1px;"
                          >
                            hello
                          </span>
                        </pre>
                      </div>
                      <div
                        style="position: relative; z-index: 1;"
                      />
                      <div
                        class="CodeMirror-cursors"
                      />
                      <div
                        class="CodeMirror-code"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                style="position: absolute; height: 50px; width: 1px;"
              />
              <div
                class="CodeMirror-gutters"
                style="display: none;"
              />
            </div>
          </div>
          <div
            class="editor-preview-side editor-preview"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
